tutorials/studying/part-4/networking/tcp/neo4j/neo4j-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: neo4j-gateway
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - port:
      name: tcp-neo4j
      number: 205
      protocol: TCP
    hosts:
    - '*'
